# void-control

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.codex/: INSTALL.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml  void-box-compatibility.yml
docs/: architecture.md  release-process.md
examples/: README.md  claude-mcp-diagnostic.yaml  normalize_void_box_json.rs  normalize_void_box_run.rs  search-rate-limit-optimization.yaml  supervision-transform-review.yaml  swarm-transform-optimization-3way.yaml  swarm-transform-optimization.yaml
examples/batch/: background_repo_work.yaml
examples/compute/: pool-python.yaml  pool-scale.yaml  sandbox-python.yaml  snapshot-from-sandbox.yaml  snapshot-replicate.yaml
examples/runtime-assets/: transform_supervision_worker.py
examples/runtime-templates/: claude_mcp_diagnostic_agent.yaml  debug_transform_service_minimal.yaml  transform_optimizer_agent.yaml  transform_supervision_worker.yaml  warm_agent_basic.yaml
examples/team/: rust_article_team.yaml
examples/void-box/: debug_service_smoke.yaml  debug_transform_service_minimal.yaml  rate_limit_optimizer_agent.yaml  transform_benchmark.py  transform_optimizer_agent.yaml
fixtures/: sample.vbrun  voidbox_run_bad_seq.json  voidbox_run_events_success.json  voidbox_run_success.json  voidbox_run_unknown_event.json
sdks/go/: README.md  batch.go  (+9 more)
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: batch_run.py  sandbox_create.py  template_execute.py
sdks/python/src/void_control/: __init__.py  batch.py  client.py  executions.py  models.py  pools.py  sandboxes.py  snapshots.py  templates.py
sdks/python/tests/: test_client.py
spec/: void-box-execution-telemetry-observability-v0.1.md  void-box-orchestration-fixes-v0.1.md  void-box-orchestration-integration-changes-v0.1.md  void-box-orchestration-runtime-readiness-v0.1.md  void-control-iteration-spec-v0.1.md  void-control-iteration-spec-v0.2.md  void-control-message-box-spec-v0.1.md  void-control-runtime-spec-v0.1.md  void-control-runtime-spec-v0.2.md  void-control-signal-reactive-spec-v0.1.md  void-control-terminal-console-spec-v0.1.md  void-control-ux-visualization-spec-v0.1.md
src/: bridge.rs  lib.rs
templates/: benchmark-runner-python.yaml  single-agent-basic.yaml  warm-agent-basic.yaml
tests/: batch_api.rs  execution_artifact_collection.rs  execution_bridge.rs  execution_bridge_live.rs  execution_dry_run.rs  execution_event_replay.rs  execution_message_box.rs  execution_message_delivery.rs  execution_reconciliation.rs  execution_scheduler.rs  execution_search_strategy.rs  execution_spec_validation.rs  execution_strategy_acceptance.rs  execution_supervision_strategy.rs  execution_swarm_strategy.rs  execution_worker.rs  sandbox_api.rs  strategy_scenarios.rs  team_api.rs  template_api.rs  transform_benchmark_example.rs  void_box_contract.rs  voidctl_execution_cli.rs  voidctl_execution_live.rs
(+129 files in other folders)
