[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "void-control"
version = "0.1.0"
description = "Async-first Python SDK for the void-control bridge API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28,<0.29",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
